# routes/properties.js
@@ -3,16 +3,15 @@ const express = require("express");
 const router = express.Router();
 
 const propertiesControllers = require("../controllers/properties");
+const authenticate = require("../middleware/authenticate.js");
 
 router.get("/", propertiesControllers.getAllProperties);
 
-
 router.get("/:id", propertiesControllers.getSingleProperty);
 
-router.post("/", propertiesControllers.createProperties);
+router.post("/", authenticate.isAuthenticated, propertiesControllers.createProperties);
 
-router.put("/:id", propertiesControllers.updateProperty);
-router.delete("/:id", propertiesControllers.deleteSingleProperty);
-
+router.put("/:id", authenticate.isAuthenticated, propertiesControllers.updateProperty);
+router.delete("/:id", authenticate.isAuthenticated, propertiesControllers.deleteSingleProperty);
 
 module.exports = router;
