# routes/users.js
@@ -3,16 +3,16 @@ const express = require("express");
 const router = express.Router();
 
 const usersControllers = require("../controllers/users");
-
-router.get("/", usersControllers.getAllUsers);
+const authenticate = require("../middleware/authenticate")
+router.get("/",  usersControllers.getAllUsers);
 
 
 router.get("/:id", usersControllers.getSingleUser);
 
-router.post("/", usersControllers.createUser);
+router.post("/", authenticate.isAuthenticated, usersControllers.createUser);
 
-router.put("/:id", usersControllers.updateUser);
-router.delete("/:id", usersControllers.deleteSingleUser);
+router.put("/:id", authenticate.isAuthenticated, usersControllers.updateUser);
+router.delete("/:id", authenticate.isAuthenticated, usersControllers.deleteSingleUser);
 
 
 module.exports = router;
